--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   pull_to_refresh: ^1.6.1
-
+  provider: ^5.0.0
+  http: ^0.13.3
 
 dev_dependencies:
   flutter_test:
